feat: add multiplier

--- a/build
+++ b/build
@@ -1,2 +1,2 @@
-iverilog -o ./output/a.out rtl/divider.v rtl/tb_divider.v
+iverilog -o ./output/a.out rtl/multiplier.v rtl/tb_multiplier.v
 vvp -n output/a.out
